--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "enet = ElasticNet(alpha=1).fit(X_train,y_train)\n",
@@ -888,21 +888,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train R2 : 0.670871407649752\n",
-      "Test R2 : 0.5627894869336407\n",
+      "Train R2 alpha = 1 : 0.670871407649752\n",
+      "Test R2 alpha = 1: 0.5627894869336407\n",
       "Number of features with a weight greater than zero (alpha = 1) : 4\n"
      ]
     }
    ],
    "source": [
-    "print('Train R2 :',train_score)\n",
-    "print('Test R2 :',test_score)\n",
+    "print('Train R2 alpha = 1 :',train_score)\n",
+    "print('Test R2 alpha = 1:',test_score)\n",
     "print('Number of features with a weight greater than zero (alpha = 1) :',coeff_used)"
    ],
    "metadata": {
@@ -916,6 +916,118 @@
    "cell_type": "markdown",
    "source": [
     "<b>alpha = 0.01"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [],
+   "source": [
+    "enet001 = ElasticNet(alpha=0.01).fit(X_train,y_train)\n",
+    "\n",
+    "train_score001 = enet001.score(X_train,y_train)\n",
+    "test_score001 = enet001.score(X_test,y_test)\n",
+    "coeff_used001 = np.sum(enet001.coef_ !=0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train R2 aplha = 0.01: 0.7333501064823666\n",
+      "Test R2 aplha = 0.01: 0.6923107858960038\n",
+      "Number of features with a weight greater than zero (alpha = 0.01) : 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Train R2 aplha = 0.01:',train_score001)\n",
+    "print('Test R2 aplha = 0.01:',test_score001)\n",
+    "print('Number of features with a weight greater than zero (alpha = 0.01) :',coeff_used001)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b> alpha = 100"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [],
+   "source": [
+    "enet100 = ElasticNet(alpha=100).fit(X_train,y_train)\n",
+    "\n",
+    "train_score100 = enet100.score(X_train,y_train)\n",
+    "test_score100 = enet100.score(X_test,y_test)\n",
+    "coeff_used100 = np.sum(enet100.coef_ !=0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train R2 aplha = 100: 0.5844501052872215\n",
+      "Test R2 aplha = 100: 0.47748967369285467\n",
+      "Number of features with a weight greater than zero (alpha = 100) : 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Train R2 aplha = 100:',train_score100)\n",
+    "print('Test R2 aplha = 100:',test_score100)\n",
+    "print('Number of features with a weight greater than zero (alpha = 100) :',coeff_used100)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>For alpha = 100, the coefficient of one of the Elastic Net model features has become zero and the number of features has decreased to 3, but all features are still used."
    ],
    "metadata": {
     "collapsed": false,
