--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -1556,6 +1556,50 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# 2-)Hyper Parameter Optimization with GridSearch for Ridge"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'alpha': 1}\n",
+      "Ridge(alpha=1, random_state=42)\n",
+      "0.7071772649347372\n"
+     ]
+    }
+   ],
+   "source": [
+    "ridge = Ridge(random_state=42)\n",
+    "\n",
+    "params = {'alpha' : [0.000000000000001, 0.0000000001, 0.00000001, 0.0001, 0.001, 0.01, 1, 2, 3, 4, 5, 10, 20, 30, 50]}\n",
+    "\n",
+    "ridge_GS = GridSearchCV(ridge,params,scoring='r2',cv=5).fit(X_train,y_train)\n",
+    "\n",
+    "print(ridge_GS.best_params_)\n",
+    "print(ridge_GS.best_estimator_)\n",
+    "print(ridge_GS.best_score_)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
