--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -1953,6 +1953,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 187,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test R2 : 0.6923107858960038\n",
+      "Train R2 : 0.7333501064823666\n"
+     ]
+    }
+   ],
+   "source": [
+    "enet_train_score = enet_final.score(X_train,y_train)\n",
+    "enet_test_score = enet_final.score(X_test,y_test)\n",
+    "\n",
+    "print('Test R2 :',enet_test_score)\n",
+    "print('Train R2 :',enet_train_score)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    437.210859\n1    462.589482\n2    446.916549\n3    465.388095\n4    454.152981\nName: price_pred, dtype: float64"
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['price_pred'] = enet_final.predict(X)\n",
+    "\n",
+    "df['price_pred'].head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
