Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -139,6 +139,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
