Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -257,14 +257,14 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 93,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "<b>RMSE scores for all polynomial values on the graph"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
