Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -314,6 +314,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "outputs": [],
+   "source": [
+    "poly_deg = PolynomialFeatures(degree=2)\n",
+    "X_train_poly = poly_deg.fit_transform(X_train)\n",
+    "X_test_poly = poly_deg.fit_transform(X_test)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
