Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -330,6 +330,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "outputs": [],
+   "source": [
+    "poly_reg =LinearRegression().fit(X_train_poly,y_train)\n",
+    "\n",
+    "model = LinearRegression().fit(X_train,y_train)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Prediction performance of multilinear model for training and test sets"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
