Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -358,6 +358,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 98,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Reg Train R2 :0.733739961656849\n",
+      "Linear Reg Test R2 :0.6987282352837991\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Linear Reg Train R2 :{model.score(X_train,y_train)}')\n",
+    "print(f'Linear Reg Test R2 :{model.score(X_test,y_test)}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
