Multiple Polynomial Regression

--- a/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
+++ b/Supervised Learning/Multiple Polynomial Regression/MultiplePolynomialRegression.ipynb
@@ -394,6 +394,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 99,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polynomial Reg Train R2 :0.8488074651060601\n",
+      "Polynomial Reg Test R2 :0.7663814623333732\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Polynomial Reg Train R2 :{poly_reg.score(X_train_poly,y_train)}')\n",
+    "print(f'Polynomial Reg Test R2 :{poly_reg.score(X_test_poly,y_test)}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
